<?xml version="1.0"?>
<package format="3">
  <name>rqt_pr2_dashboard</name>
  <version>0.4.0</version>
  <description>rqt_pr2_dashboard is a GUI for debugging and controlling low-level state of the PR2.  It shows things like battery status and breaker states, as well as integrating tools like rqt_console and robot_monitor.
  </description>

  <author email="ablasdel@gmail.com">Aaron Blasdel</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/rqt_pr2_dashboard</url>
  <url type="repository">https://github.com/ros-visualization/rqt_pr2_dashboard</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_pr2_dashboard/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>pr2_power_board</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_robot_dashboard</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>


